# PwrCtrl

./: .envrc.license  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Cargo.lock.license  Cargo.toml  LICENSE  README.md  cog.toml  default.nix  flake.lock.license  flake.nix  pwrctrl.nix  rust-toolchain.toml  winlintdpcontrol.nix
.github/: FUNDING.yml
.reuse/: dep5
lib/common/: Cargo.toml  build.rs
lib/common/src/: lib.rs
src/common/: Cargo.toml
src/common/src/: lib.rs
src/kernel/linux/: Cargo.toml
src/kernel/linux/src/: lib.rs  main.rs
src/kernel/windows/: Cargo.lock.license  Cargo.toml
src/kernel/windows/src/: lib.rs
