# SPDX-FileCopyrightText: The PwrCtrl Developers
#
# SPDX-License-Identifier: Apache-2.0

[workspace]
members = [
    "bin/kernel/linux",
    "bin/kernel/windows",
    "bin/stub",
    "lib/common"
]
default-members = ["lib/common", "bin/stub"]
resolver = "2"

[workspace.package]
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
version = "0.1.0"
rust-version = "1.73.0"
license = "Apache-2.0"
readme = "/README.md"
repository = "https://github.com/shymega/PwrCtrl.git"
homepage = "https://github.com/shymega/PwrCtrl"
edition = "2021"
categories = ["osdev", "no-std"]
keywords = ["tdp", "gaming", "cpu", "gpu", "osdev"]

[workspace.dependencies]
anyhow = { version = "1.0.75", default-features = false }
thiserror-no-std = "2.0.2"

[profile.dev]
lto = true
opt-level = 3
codegen-units = 1
debug = true

[profile.dev.package."*"]
codegen-units = 1
opt-level = 3
debug = true

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
debug = false

[profile.release.package."*"]
codegen-units = 1
opt-level = 3
debug = false
