# SPDX-FileCopyrightText: 2023 The PwrCtrl Developers
#
# SPDX-License-Identifier: Apache-2.0

[package]
authors.workspace = true
categories.workspace = true
description = "Common module for PwrCtrl"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "pwrctrl-common"
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
build = "build.rs"

[features]
default = []
amd_cpu = []
intel_cpu = []

[dependencies]
anyhow.workspace = true
pci_types = "0.6.2"
thiserror-no-std.workspace = true
x86 = "0.52.0"

[build-dependencies]
raw-cpuid = "11.0.1"
